# VTest

./: .gitignore  README.md
Client/: CMakeLists.txt
Client/src/ClientApplication/: ClientApplication.cpp  ClientApplication.hpp  ClientProgram.hpp  HumanProgram.cpp  HumanProgram.hpp  IAProgram.cpp  IAProgram.hpp
Client/src/ClientApplication/ClientInput/: ClientInput.hpp  HumanInput.cpp  HumanInput.hpp  IAInput.cpp  IAInput.hpp
Client/src/Main/: main.cpp
Common/: CMakeLists.txt
Common/src/: ArgumentParser.cpp  ArgumentParser.hpp
Common/src/ArgumentParser/: ArgumentManager.cpp  ArgumentManager.hpp  ArgumentParser.hpp  ArgumentParserTemplate.hpp  BoolArgumentParser.cpp  BoolArgumentParser.hpp  BoundsArgumentParser.cpp  BoundsArgumentParser.hpp  IntArgumentParser.cpp  IntArgumentParser.hpp  StringArgumentParser.cpp  StringArgumentParser.hpp
Common/src/httplib/: httplib.h
Server/: CMakeLists.txt
Server/src/Main/: main.cpp
Server/src/ServerApplication/: ConnectedClient.cpp  ConnectedClient.hpp  GameHistory.cpp  GameHistory.hpp  ServerApplication.cpp  ServerApplication.hpp
