cmake_minimum_required(VERSION 3.25)
project(Server)

set(CMAKE_CXX_STANDARD 20)

#SOURCES FILES

set (SERVER_SRC_FILES

${CMAKE_SOURCE_DIR}/src/Main/*.cpp

)

#GROUPING SOURCE FILES IN A TREE

file( GLOB SERVER_SRC LIST_DIRECTORIES FALSE ${SERVER_SRC_FILES})
source_group( TREE ${CMAKE_SOURCE_DIR}/src PREFIX Server FILES ${SERVER_SRC})

#ADD EXECUTABLE

add_executable (Server ${SERVER_SRC})
